# RustMinioS3SurrealDbDirectoryTraversalUploader

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  NOTES.md  NOTES_TAGS.md  QUERIES.md  TLDR.md  TODO  backup.sh  list.txt  renameFilesAndDirs.sh  root.txt  rustfmt.toml  s3upload-root.sh  s3upload.sh  schemafull.surql
.bak/: 2024-01-29-23-43.tgz  2024-01-30-21-37.tgz  descripion
assets-minio/: NOTES.md
migrations/: 20231222005828_init.down.sql  20231222005828_init.up.sql
production/: .NOTES.md.swp  Makefile  NOTES.md  backup.sh  descript.ion  docker-compose.yml  extensions.txt  history.txt  list.txt  listfiles.txt  minio-policy-original.json  minio-policy.json  nginx.conf  scriptCreateImageThumbnail.sh  scriptLowercaseExtension.sh  scriptRenameFilenamesToTitle.sh  scriptRenameFilenamesToTitle.txt  update-certificates.sh
production/certs/: fullchain.pem  privkey.pem
production/database-both/: IDENTITY
production/somedatabase/: IDENTITY
root.simple/: root.file
root/dir1/: dir1.file
root/dir1/dir1.2/: dir1.2.file
root/dir1/dir1.3/: dir1.3.file
root/dir2/: dir1.2.1.link
root/dir3/: dir1.3.1.link
src/: main.rs
src/app/: constants.rs
src/minio/: client.rs
src/sqlx/: mod.rs
src/surrealdb/: mod.rs
src/utils/: datetime.rs  file_type.rs  mod.rs  shell_command.rs  thumbnail.rs
src/walker/: mod.rs
upload/dir1/: dir1-1.file  dir1.file
upload/dir1/dir1.1/: dir1.1.file
upload/dir1/dir1.1/dir1.1.1/: dir1.1.1-1.file  dir1.1.1-2.file  dir1.1.1-3.file  dir1.1.1-4.file  dir1.1.1-5.file
upload/dir1/dir1.2/: dir1.2-1.file  dir1.2.file
upload/dir1/dir1.2/dir1.2.1/: dir1.2.1-1.file  dir1.2.1.file
upload/dir1/dir1.2/dir1.2.2/: dir1.2.2-1.file
upload/dir1/dir1.3/: dir1.3-1.file  dir1.3.file
upload/dir1/dir1.3/dir1.3.1/: dir1.3.1-1.file  dir1.3.1.file
upload/dir1/dir1.3/dir1.3.2/: dir1.3.2-1.file  dir1.3.2.file
upload/dir2/: dir2-1.file  dir2.file
upload/dir3/: dir3-1.file  dir3.file
upload/mime-types/: file.3gp  file.aac  file.abw  file.avi  file.azw  file.csv  file.docx  file.epub  file.html  file.mov  file.ods  file.oga  file.ogx  file.ppt  file.tiff  file.txt  file.xls
walkdir/dir1/dir1.1/: dir1.1.file
walkdir/dir2/: dir1.2.1.file.link
walkdir/dir3/: dir1.3.1.file.link
(+12 files in other folders)
