[package]
name = "rust-directory-traversal-rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio"] }
walkdir = "2.4.0"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
getrandom = "0.2.11"
sha256 = "1.4.0"
