[package]
name = "rust-directory-traversal-rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
walkdir = "2.4.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs,
  "serde",             # serde serialize and deserialize
] }
getrandom = "0.2.11"
sha256 = "1.4.0"
from-os-str = "0.1.0"
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
surrealdb = "1.1.1"
