[package]
name = "rust-directory-traversal-rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
walkdir = "2.4.0"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2.11"
sha256 = "1.4.0"
from-os-str = "0.1.0"
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
surrealdb = "1.1.1"
aws-sdk-s3 = "0.26"
